--- a/MasterPage.master
+++ b/MasterPage.master
@@ -167,8 +167,8 @@
 
     <!-- Bootstrap -->
 <%-- <script src='<%= ResolveUrl("~/moment/jquery-3.7.0.js") %>' type="text/javascript"></script>--%>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src='<%= ResolveUrl("~/moment/bootstrap431.bundle.min.js") %>' type="text/javascript"></script>
+<%--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>--%>
 
 
    <%-- <script src='<%= ResolveUrl("~/vendors/bootstrap/dist/js/bootstrap431.js") %>' type="text/javascript"></script>--%>
